k8s/service-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: luxx-mysql-beta
spec:
  selector:
    app: luxx-mysql-beta
  type: NodePort
  ports:
    - port: 3306
